fix close create task panel error

--- a/scripts/view/dashboard/tasks/create_task.html
+++ b/scripts/view/dashboard/tasks/create_task.html
@@ -95,7 +95,7 @@ function get_members_of_proj(pid) {
 }
 
 function quit_create() {
-    filter_task('/dashboard/tasks/all_of_mine');
+    last_filter_menu.click();
     $('.xdsoft_datetimepicker').remove();
 }
 
