change color for OPENED

--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-3">
-        <div class="card text-white shadow bg-warning">
+        <div class="card text-white shadow bg-secondary">
             <div class="card-header px-2 py-1">
                 <i class="fa fa-circle-o mr-2"></i>待办中
             </div>
