--- a/scripts/view/dashboard/tasks/view_tasks.html
+++ b/scripts/view/dashboard/tasks/view_tasks.html
@@ -4,7 +4,7 @@
         <i class="fa fa-eye mr-1"></i><b class="mr-1">{{summary.title}}</b>的任务<span class="mr-4"></span>
 
         <small>
-            <span class="bg-dark text-white p-1">待办中</span><span class="bg-warning text-white px-2 py-1 mr-2">{{summary.opened}}</span>
+            <span class="bg-dark text-white p-1">待办中</span><span class="bg-secondary text-white px-2 py-1 mr-2">{{summary.opened}}</span>
             <span class="bg-dark text-white p-1">进行中</span><span class="bg-info text-white px-2 py-1 mr-2">{{summary.underway}}</span>
             <span class="bg-dark text-white p-1">已滞后</span><span class="bg-danger text-white px-2 py-1 mr-2">{{summary.delayed}}</span>
             <span class="bg-dark text-white p-1">已完成</span><span class="bg-success text-white px-2 py-1 mr-2">{{summary.closed}}</span>
