--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -13,6 +13,12 @@
 		<script src="/www/js/jquery.form.min.js"></script>
 		<script src="/www/js/popper.min.js"></script>
 		<script src="/www/js/bootstrap.min.js"></script>
+
+		<style>
+		body {
+			font-family: 'Microsoft YaHei', Verdana, sans-serif, SimSun;
+		}
+		</style>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark p-0">
