--- a/scripts/view/dashboard/tasks/index.html
+++ b/scripts/view/dashboard/tasks/index.html
@@ -5,73 +5,77 @@
 
     <!-- 任务概览 -->
     <div class="container-fluid pt-2 px-2 pb-0">
-        <i class="fa fa-list mr-2"></i><b>我的任务</b>
+        <i class="fa fa-list mr-2"></i><label>我的任务</label>
         <div class="btn-link pull-right" onclick="return create_task();">
             <i class="fa fa-plus mr-1"></i>发布任务
         </div>
     </div>
-    <hr class="my-1 mx-0">
-    <div class="container-fluid p-4">
+    <hr class="m-0">
+    <div class="container-fluid p-4" style="color:rgb(102, 102, 102); font-size: .75em;">
         <div class="row">
-            <div class="col-6">
-                <i class="fa fa-circle-o mr-1"></i>待办中 {{mine.opened}}
+            <div class="col-6 text-center">
+                <h2>{{mine.opened}}</h2>
+                <i class="fa fa-circle-o mr-1"></i>待办中
             </div>
-            <div class="col-6">
-                <i class="fa fa-dot-circle-o mr-1"></i>进行中 {{mine.underway}}
+            <div class="col-6 text-center">
+                <h2>{{mine.underway}}</h2>
+                <i class="fa fa-dot-circle-o mr-1"></i>进行中
             </div>
         </div>
 
         <div class="row pt-2">
-            <div class="col-6">
-                <i class="fa fa-exclamation-circle mr-1"></i>已滞后 {{mine.delayed}}
+            <div class="col-6 text-center">
+                <h2>{{mine.delayed}}</h2>
+                <i class="fa fa-exclamation-circle mr-1"></i>已滞后
             </div>
-            <div class="col-6">
-                <i class="fa fa-check-circle mr-1"></i>已完成 {{mine.closed}}
+            <div class="col-6 text-center">
+                <h2>{{mine.closed}}</h2>
+                <i class="fa fa-check-circle mr-1"></i>已完成
             </div>
         </div>
     </div>
     <ul class="flex-column px-4">
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task('/dashboard/tasks/all_of_mine');"><i class="fa fa-list-alt mr-2"></i>所有任务</a>
+            <a id="task-menu-default" class="menu-link active" href="#" onclick="return filter_task(this, '/dashboard/tasks/all_of_mine');"><i class="fa fa-list-alt mr-2"></i>所有任务</a>
             <span class="badge badge-secondary">{{mine.opened + mine.underway + mine.closed}}</span>
         </li>
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task('/dashboard/tasks/assigned_to_me');"><i class="fa fa-hand-o-right mr-2"></i>指派给我的</a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/assigned_to_me');"><i class="fa fa-hand-o-right mr-2"></i>指派给我的</a>
             <span class="badge badge-secondary">{{mine.assigned_to_me}}</span>
         </li>
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task('/dashboard/tasks/create_by_me');"><i class="fa fa-bullhorn mr-2"></i>我发布的</a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/create_by_me');"><i class="fa fa-bullhorn mr-2"></i>我发布的</a>
             <span class="badge badge-secondary">{{mine.create_by_me}}</span>
         </li>
     </ul>
 
     <!-- 按优先级筛选功能 -->
     <div class="container-fluid mt-2 p-0">
-        <i class="fa fa-sort mx-2"></i><b> 按优先级筛选</b>
-    </div>    
-    <hr class="my-1 mx-0">
-    <div class="flex-column px-4">
+        <i class="fa fa-sort mx-2"></i> <label>按优先级筛选</label>
+    </div>
+    <hr class="m-0">
+    <ul class="flex-column px-4 mt-2">
         {% for idx, info in ipairs(weights or {}) do %}
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task('/dashboard/tasks/filter_weight', {{idx}});"><span class="{{info.color}}">【{{info.title}}】</span></a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_weight', '{{idx}}');"><i class="fa fa-circle {{info.color}}"></i>【{{info.title}}】</a>
             <span class="badge badge-secondary">{{mine.weights[idx] or 0}}</span>
         </li>
         {% end %}
-    </div>
+    </ul>
 
     <!-- 按项目筛选功能 -->
     <div class="container-fluid mt-3 p-0">
-        <i class="fa fa-filter mx-2"></i><b>按项目筛选</b>
+        <i class="fa fa-filter mx-2"></i><label>按项目筛选</label>
     </div>
-    <hr class="my-1 mx-0">
-    <div class="flex-column px-4">
+    <hr class="m-0">
+    <ul class="flex-column px-4 mt-2">
         {% for id, info in pairs(mine.projects) do %}
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task('/dashboard/tasks/filter_proj', {{id}}, '{{info.name}}');">【{{info.name}}】</span></a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_proj', '{{id}}', '{{info.name}}');">【{{info.name}}】</span></a>
             <span class="badge badge-secondary">{{info.count}}</span>
         </li>
         {% end %}
-    </div>
+    </ul>
 </div>
 
 <!-- 任务面板 -->
@@ -87,7 +91,12 @@ function create_task() {
     }, 'html');
 }
 
-function filter_task(url, p1, p2) {
+var last_filter_menu = $('#task-menu-default');
+function filter_task(menu, url, p1, p2) {
+    if (last_filter_menu) last_filter_menu.removeClass('active');
+    last_filter_menu = $(menu);
+    last_filter_menu.addClass('active');
+
     $('#task-content').empty();
     $('#task-content').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 10%"><img src="/www/images/loading.gif" class="mb-4"><h1>努力加载中 ...</h1></div>';
 
