modify color theme

--- a/scripts/view/dashboard/projects/archive.html
+++ b/scripts/view/dashboard/projects/archive.html
@@ -1,8 +1,8 @@
-<div class="m-2 p-2">
-    <i class="fa fa-eye mr-1"></i><b class="mr-1">{{proj_name}}</b>归档管理
-    <hr>
+<div class="m-2">
+    <i class="fa fa-eye mr-1"></i><label class="title mr-1">归档管理</label>
+    <hr class="m-0">
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-2">
         <div class="row">
             <!-- 可归档列表 -->
             <div class="col-6">
