--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -1,5 +1,5 @@
-<div class="m-2 p-2">
-    <i class="fa fa-eye mr-1"></i><b class="mr-1">{{proj_name}}</b>周报
+<div class="m-2">
+    <i class="fa fa-eye mr-1"></i><label class="title">{{proj_name}}周报</label>
 
     <div class="container mt-4 text-center">
         <img src="/www/images/loading.gif">
