--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -6,24 +6,26 @@
 		<title>{{config.app.name}}</title>
 		
 		<link rel="stylesheet" href="/www/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/www/css/bootstrap-editor.min.css">
+		<link rel="stylesheet" href="/www/css/jquery.datetimepicker.css">
+		<link rel="stylesheet" href="/www/css/jquery.gantt.min.css">
+		<link rel="stylesheet" href="/www/css/jstree.min.css">
 		<link rel="stylesheet" href="/www/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/www/css/site.css">
 
 		<script src="/www/js/jquery.min.js"></script>
 		<script src="/www/js/jquery.form.min.js"></script>
+		<script src="/www/js/jquery.datetimepicker.min.js"></script>
+		<script src="/www/js/jquery.gantt.min.js"></script>
+		<script src="/www/js/jstree.min.js"></script>
 		<script src="/www/js/popper.min.js"></script>
 		<script src="/www/js/bootstrap.min.js"></script>
-
-		<style>
-		body {
-			font-family: 'Microsoft YaHei', Verdana, sans-serif, SimSun;
-		}
-		</style>
+		<script src="/www/js/bootstrap-editor.min.js"></script>
 	</head>
-	<body>
+	<body style="font-family: 'Microsoft YaHei', Verdana, sans-serif, SimSun;">
 		<nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark p-0">
-			<a class="navbar-brand" href="#">
-				<img src="/www/images/logo.png" width="24px" height="24px" style="margin-top: -6px; margin-left: 8px">
+			<a class="navbar-brand" href="#" style="font-size: 1em; color: #10af88;">
+				<img src="/www/images/logo.png" width="24px" height="24px" style="margin: -6px 8px 0 8px;">
 				{{config.app.name}}
 			</a>
 
