--- a/scripts/view/dashboard/layout_dashboard.html
+++ b/scripts/view/dashboard/layout_dashboard.html
@@ -1,6 +1,6 @@
 {% layout = 'layout_base.html' %}
 
-<nav class="sidebar bg-secondary text-center">
+<nav class="sidebar text-center">
     <ul class="list-unstyled">
         <li class="{{dashboard_menu == 'tasks' and 'active' or ''}}"><a href="/dashboard/tasks/"><i class="fa fa-tasks"></i><br>任务</a></li>
         <li class="{{dashboard_menu == 'projects' and 'active' or ''}}"><a href="/dashboard/projects/"><i class="fa fa-code-fork"></i><br>项目</a></li>
