--- a/scripts/view/dashboard/projects/members.html
+++ b/scripts/view/dashboard/projects/members.html
@@ -1,9 +1,9 @@
-<div class="m-2 p-2">
-    <i class="fa fa-eye mr-1"></i><b class="mr-1">{{proj_name}}</b>的成员列表
-    <button type="button" class="btn btn-sm btn-default pull-right" data-toggle="modal" data-target="#mdl-add-member">添加成员</button>
-    <hr>
+<div class="m-2">
+    <i class="fa fa-eye mr-1"></i><label class="title">{{proj_name}}成员管理</label>
+    <a href="#" class="btn-link pull-right" data-toggle="modal" data-target="#mdl-add-member"><i class="fa fa-plus mr-1"></i>添加成员</a>
+    <hr class="m-0">
     
-    <table class="table table-sm table-bordered">
+    <table class="table table-sm table-bordered mt-2">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
