--- a/scripts/view/dashboard/tasks/index.html
+++ b/scripts/view/dashboard/tasks/index.html
@@ -5,7 +5,7 @@
 
     <!-- 任务概览 -->
     <div class="container-fluid pt-2 px-2 pb-0">
-        <i class="fa fa-list mr-2"></i><label>我的任务</label>
+        <i class="fa fa-list mr-2"></i><label class="title">我的任务</label>
         <div class="btn-link pull-right" onclick="return create_task();">
             <i class="fa fa-plus mr-1"></i>发布任务
         </div>
@@ -36,28 +36,28 @@
     </div>
     <ul class="flex-column px-4">
         <li class="d-flex justify-content-between align-items-center">
-            <a id="task-menu-default" class="menu-link active" href="#" onclick="return filter_task(this, '/dashboard/tasks/all_of_mine');"><i class="fa fa-list-alt mr-2"></i>所有任务</a>
+            <a id="task-menu-default" class="menu-link active" href="#" onclick="return filter_task(this, '/dashboard/tasks/all_of_mine');"><i class="fa fa-list-alt mr-2"></i>我参与的任务</a>
             <span class="badge badge-secondary">{{summary.opened + summary.underway + summary.closed}}</span>
         </li>
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/assigned_to_me');"><i class="fa fa-hand-o-right mr-2"></i>指派给我的</a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/assigned_to_me');"><i class="fa fa-hand-o-right mr-2"></i>指派给我的任务</a>
             <span class="badge badge-secondary">{{mine.assigned_to_me}}</span>
         </li>
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/create_by_me');"><i class="fa fa-bullhorn mr-2"></i>我发布的</a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/create_by_me');"><i class="fa fa-bullhorn mr-2"></i>我发布的任务</a>
             <span class="badge badge-secondary">{{mine.create_by_me}}</span>
         </li>
     </ul>
 
     <!-- 按优先级筛选功能 -->
     <div class="container-fluid mt-2 p-0">
-        <i class="fa fa-sort mx-2"></i> <label>按优先级筛选</label>
+        <i class="fa fa-sort mx-2"></i> <label class="title">按优先级筛选</label>
     </div>
     <hr class="m-0">
     <ul class="flex-column px-4 mt-2">
         {% for idx, info in ipairs(weights or {}) do %}
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_weight', '{{idx}}');"><i class="fa fa-circle {{info.color}}"></i>【{{info.title}}】</a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_weight', '{{idx}}');"><i class="fa fa-circle {{info.color}} mr-2"></i>{{info.title}}</a>
             <span class="badge badge-secondary">{{mine.weights[idx] or 0}}</span>
         </li>
         {% end %}
@@ -65,13 +65,13 @@
 
     <!-- 按项目筛选功能 -->
     <div class="container-fluid mt-3 p-0">
-        <i class="fa fa-filter mx-2"></i><label>按项目筛选</label>
+        <i class="fa fa-filter mx-2"></i><label class="title">按项目筛选</label>
     </div>
     <hr class="m-0">
     <ul class="flex-column px-4 mt-2">
         {% for id, info in pairs(mine.projects) do %}
         <li class="d-flex justify-content-between align-items-center">
-            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_proj', '{{id}}', '{{info.name}}');">【{{info.name}}】</span></a>
+            <a class="menu-link" href="#" onclick="return filter_task(this, '/dashboard/tasks/filter_proj', '{{id}}', '{{info.name}}');"><i class="fa fa-bookmark mr-2"></i>{{info.name}}</span></a>
             <span class="badge badge-secondary">{{info.count}}</span>
         </li>
         {% end %}
