--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-3">
-        <div class="card text-white shadow bg-secondary">
+        <div class="card text-white bg-secondary" style="font-size: .9em;">
             <div class="card-header px-2 py-1">
                 <i class="fa fa-circle-o mr-2"></i>待办中
             </div>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card shadow text-white bg-info">
+        <div class="card text-white bg-info" style="font-size: .9em;">
             <div class="card-header px-2 py-1">
                 <i class="fa fa-dot-circle-o mr-2"></i>进行中
             </div>
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card text-white shadow bg-danger">
+        <div class="card text-white bg-danger" style="font-size: .9em;">
             <div class="card-header px-2 py-1">
                 <i class="fa fa-exclamation-circle mr-2"></i>已滞后
             </div>
@@ -108,7 +108,7 @@
         </div>
     </div>
     <div class="col-3">
-        <div class="card text-white shadow bg-success">
+        <div class="card text-white bg-success" style="font-size: .9em;">
             <div class="card-header px-2 py-1">
                 <i class="fa fa-check-circle mr-2"></i>已完成
             </div>
