--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -1,6 +1,3 @@
-<link rel="stylesheet" href="/www/css/bootstrap-editor.min.css">
-<link rel="stylesheet" href="/www/css/jquery.datetimepicker.css">
-
 <button class="task-view-pane-close" onclick="return close_task();"><i class="fa fa-chevron-right"></i></button>
 
 <div class="px-2 my-2" style="margin-left: 24px;">
@@ -19,7 +16,7 @@
     <hr class="mx-0 mt-0 mb-1">
 
     <!-- 状态栏 -->
-    <div class="d-flex">
+    <div class="d-flex" style="font-size:.95em">
 
         <!-- 指派 -->
         <div class="dropdown">
@@ -115,14 +112,14 @@
     </div>
 </div>
 
-<script src="/www/js/bootstrap-editor.min.js"></script>
-<script src="/www/js/jquery.datetimepicker.min.js"></script>
 <script>
 var content = $('#task-content-preview').get(0).innerHTML;
 var editor = null;
 
-$('#task-content-preview').empty();
-$('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+$(document).ready(function() {
+    $('#task-content-preview').empty();
+    $('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+});
 
 $('#form-mod-time .form-datetime').datetimepicker({
     format: 'Y-m-d',
