--- a/scripts/view/dashboard/tasks/task_info_readonly.html
+++ b/scripts/view/dashboard/tasks/task_info_readonly.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="/www/css/bootstrap-editor.min.css">
-
 <button class="task-view-pane-close" onclick="return close_task();"><i class="fa fa-chevron-right"></i></button>
 
 <div class="px-2 my-2" style="margin-left: 24px;">
@@ -77,12 +75,13 @@
     </div>
 </div>
 
-<script src="/www/js/bootstrap-editor.min.js"></script>
 <script>
 var content = $('#task-content-preview').get(0).innerHTML;
 
-$('#task-content-preview').empty();
-$('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+$(document).ready(function() {
+    $('#task-content-preview').empty();
+    $('#task-content-preview').append('<div class="md-preview d-block mh-100">' + marked(content || '') + '</div>');
+})
 
 function close_task() {
     $('#task-view').removeClass('visible');
