--- a/scripts/view/user/profile/index.html
+++ b/scripts/view/user/profile/index.html
@@ -51,7 +51,7 @@
                 <form id="form-mod-avatar" action="/user/profile/set_avatar" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="img">选择头像文件</label>
-                        <input id="img" name="img" type="file" class="form-control" required autofocus>
+                        <input id="img" name="img" type="file" class="form-control" accept="image/*" required autofocus>
                     </div>
                 </form>
             </div>
