using light header for tables

--- a/scripts/view/dashboard/files/index.html
+++ b/scripts/view/dashboard/files/index.html
@@ -6,7 +6,7 @@
     </button>
 
     <table class="table table-sm table-bordered">
-        <thead class="thead-dark">
+        <thead class="thead-light">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">文件</th>
