--- a/scripts/view/dashboard/admin/users.html
+++ b/scripts/view/dashboard/admin/users.html
@@ -4,7 +4,7 @@
     <hr class="m-0">
 
     <table class="table table-sm table-bordered mt-2">
-        <thead class="thead-dark">
+        <thead class="thead-light">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">帐号</th>
