--- a/scripts/view/dashboard/tasks/mode_gantt.html
+++ b/scripts/view/dashboard/tasks/mode_gantt.html
@@ -5,7 +5,7 @@
 <script type='text/javascript'>
 $('#gantt-view').ganttView({
     data: $.parseJSON('{*gantt_data*}'),
-    showWeekends: false,
+    showWeekends: true,
     behavior: {
         clickable: true,
         draggable: false,
