--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -1,8 +1,64 @@
 <div class="m-2">
-    <i class="fa fa-eye mr-1"></i><label class="title">{{proj_name}}周报</label>
+    <div class="d-flex justify-content-center">
+        <a href="#" class="btn-link" onclick="return goto_week('{{report.week_offset - 1}}');" style="font-size: 2.5em"><i class="fa fa-chevron-circle-left"></i></a>
+        <div class="text-center mx-4">
+            <h3 class="mb-1">第{{report.week}}周项目周报</h3>
+            <small class="badge badge-secondary">{{report.week_start}} - {{report.week_end}}</small>
+        </div>
+        <a href="#" class="btn-link" onclick="return goto_week('{{report.week_offset + 1}}');" style="font-size: 2.5em"><i class="fa fa-chevron-circle-right"></i></a>
+    </div>
+    <hr class="mx-0 my-1">
+    
+    <div class="p-4">
+        <h4><i class="fa fa-smile-o mr-2"></i>本周已验收</h4>
+        <ul class="mt-4 px-4" style="list-style-type: none">
+            {% for _, task in ipairs(report.archived) do %}
+            <li class="mb-1">
+                <input type="checkbox" checked disabled>
+                <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                <span class="badge badge-dark text-white ml-2">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. ' 至 ' .. tostring(task.end_time)}}
+            </li>
+            {% end %}
+        </ul>
+    </div>
 
-    <div class="container mt-4 text-center">
-        <img src="/www/images/loading.gif">
-        <h1 class="text-muted">功能建设中，敬请期待...</h1>
+    <div class="p-4">
+        <h4><i class="fa fa-frown-o mr-2"></i>本周该验收但未能验收的任务</h4>
+        <ul class="mt-4 px-4" style="list-style-type: none">
+            {% for _, task in ipairs(report.not_archived) do %}
+            <li class="mb-1">
+                <input type="checkbox" disabled>
+                <a href="#" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
+                <span class="badge badge-dark text-white ml-2">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-dark text-white">{{task.assigned_name}}</span>
+                <i class="fa fa-calendar mx-1"></i>{{tostring(task.start_time) .. ' 至 ' .. tostring(task.end_time)}}
+            </li>
+            {% end %}
+        </ul>
     </div>
 </div>
+
+<div id="task-view" class="task-view-pane invisible">
+    <div id="task-info-pane">
+    </div>
+</div>
+
+<script>
+function goto_week(week_offset) {
+    $.post('/dashboard/projects/get_reports', {pid: '{{proj_id}}', pname: '{{proj_name}}', week_offset: week_offset}, function(ret) {
+        $('#project-detail').empty();
+        $('#project-detail').append($(ret));
+    }, 'html');
+}
+function open_task(tid) {
+    $('#task-info-pane').empty();
+    $('#task-info-pane').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 10%"><img src="/www/images/loading.gif" class="mb-4"><h1>努力加载中 ...</h1></div>';
+    $('#task-view').removeClass('invisible');
+    $('#task-view').addClass('visible');
+
+    $.post('/dashboard/tasks/readonly_info', {id : tid}, function(ret) {
+        $('#task-info-pane').empty();
+        $('#task-info-pane').append($(ret));
+    }, 'html');
+}
+</script>
